--- a/src/main/resources/myApp.properties
+++ b/src/main/resources/myApp.properties
@@ -25,12 +25,12 @@ beneficiaryEditUrl =http://10.208.122.31:8080/commonapi-v1.0/beneficiary/update
 registrarAdvanceSearchUrl =http://10.208.122.31:8080/commonapi-v1.0/beneficiary/searchBeneficiary
 
 ## Data Sync API
-#dataSyncUploadUrl=http://localhost:82/dataSync/van-to-server
-dataSyncUploadUrl=http://10.208.122.38:8080/mmuapi-v1.0/dataSync/van-to-server
+#dataSyncUploadUrl=http://10.208.122.38:8080/mmuapi-v1.0/dataSync/van-to-server
+dataSyncUploadUrl=
 
 ## Data download API
-#dataSyncDownloadUrl=http://localhost:82/dataSync/server-to-van
-dataSyncDownloadUrl=http://10.208.122.38:8080/mmuapi-v1.0/dataSync/server-to-van
+#dataSyncDownloadUrl=http://10.208.122.38:8080/mmuapi-v1.0/dataSync/server-to-van
+dataSyncDownloadUrl=
 
 ## TC specialist slot booking
 #tcSpecialistSlotBook=http://localhost:8082/schedule/bookSlot
