--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -44,10 +44,10 @@ enableIPValidation=false
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 #
-#spring.datasource.url=jdbc:mysql://10.208.122.38:3306/db_iemr?autoReconnect=true&useSSL=false
-#spring.datasource.username=piramaldev
-#spring.datasource.password=Piramal@2017
-#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://10.208.122.31:3306/db_iemr?autoReconnect=true&useSSL=false
+spring.datasource.username=piramaldev
+spring.datasource.password=Piramal@2017
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 ###
-#server.port=82
+server.port=82
 swymed_dnsname=swymed://14.143.13.109
