SMS integration for scheduled beneficiary

--- a/src/main/resources/myApp.properties
+++ b/src/main/resources/myApp.properties
@@ -33,9 +33,20 @@ dataSyncUploadUrl=
 dataSyncDownloadUrl=
 
 ## TC specialist slot booking
-#tcSpecialistSlotBook=http://localhost:8082/schedule/bookSlot
+#tcSpecialistSlotBook=http://localhost:9091/schedule/bookSlot
 tcSpecialistSlotBook=http://10.208.122.31:8080/schedulerapi-v1.0/schedule/bookSlot
 
 ## TC specialist slot cancelling
-#tcSpecialistSlotCancel=http://localhost:8082/schedule/cancelBookedSlot
+#tcSpecialistSlotCancel=http://localhost:9091/schedule/cancelBookedSlot
 tcSpecialistSlotCancel=http://10.208.122.31:8080/schedulerapi-v1.0/schedule/cancelBookedSlot
+
+## TM sms to beneficiary(schedule, cancel, reschedule)
+#sendSMSUrl=http://localhost:8080/sms/sendSMS
+sendSMSUrl=http://10.208.122.31:8080/commonapi-v1.0/sms/sendSMS
+
+
+
+## TM SMS template details(SMS type)
+schedule=TC Schedule SMS
+cancel=TC Cancel SMS
+reSchedule=TC Reschedule SMS
