--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -40,7 +40,7 @@ enableIPValidation=false
 swymed_dnsname=swymed://14.143.13.109
 
  ##DB connection
-#spring.datasource.url=jdbc:mysql://10.208.122.32:3306/db_iemr?autoReconnect=true&useSSL=false
-#spring.datasource.username=piramaldev
-#spring.datasource.password=Piramal@2017
-#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://10.208.122.32:3306/db_iemr?autoReconnect=true&useSSL=false
+spring.datasource.username=piramaldev
+spring.datasource.password=Piramal@2017
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
