worklist restriction configuration added for this

--- a/src/main/resources/myApp.properties
+++ b/src/main/resources/myApp.properties
@@ -52,3 +52,11 @@ cancel=TC Cancel SMS
 reSchedule=TC Reschedule SMS
 
 snomedCTPageSize=10
+
+nurseTCWL=7
+docWL=7
+pharmaWL=7
+labWL=7
+radioWL=7
+oncoWL=7
+tcSpeclistWL=7
