tm openkm file upload

--- a/src/main/environment/common_dev.properties
+++ b/src/main/environment/common_dev.properties
@@ -52,6 +52,10 @@ tcSpecialistSlotCancel=http://10.208.122.38:8080/schedulerapi-v1.0/schedule/canc
 #sendSMSUrl=http://localhost:8080/sms/sendSMS
 sendSMSUrl=http://10.208.122.38:8080/commonapi-v1.0/sms/sendSMS
 
+### get openkm doc download url
+#openkmDocUrl=http://localhost:8080/sms/sendSMS
+openkmDocUrl=http://10.208.122.38:8080/commonapi-v1.0/kmfilemanager/getKMFileDownloadURL
+
 
 
 ## TM SMS template details(SMS type)
