Changes Done for Redis Remote Connection from Application

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,7 +27,7 @@ spring.jpa.hibernate.format_sql=true
 
 
 spring.session.store-type=redis
-spring.redis.host=localhost
+#spring.redis.host=localhost
 spring.redis.password=
 spring.redis.port=6379
 ## Below values are needed for extending the expiry time and extend expiry time. 
