--- a/src/main/environment/common_local.properties
+++ b/src/main/environment/common_local.properties
@@ -4,3 +4,6 @@ spring.datasource.url=jdbc:mysql://localhost:3306/db_iemr?autoReconnect=true&use
 spring.datasource.username=root
 spring.datasource.password=root@123
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+spring.redis.host=10.208.122.38
+
