Changes Done for Redis Remote Connection from Application

--- a/src/main/environment/common_local.properties
+++ b/src/main/environment/common_local.properties
@@ -5,5 +5,6 @@ spring.datasource.username=root
 spring.datasource.password=root@123
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
-spring.redis.host=10.208.122.38
+### Redis IP
+spring.redis.host=localhost
 
