--- a/pom.xml
+++ b/pom.xml
@@ -245,6 +245,7 @@
 
 	<build>
 		<finalName>tmapi-v1.0</finalName>
+		<pluginManagement>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -360,6 +361,7 @@
 			</plugin>
 
 		</plugins>
+	</pluginManagement>
 	</build>
 	<dependencyManagement>
 		<dependencies>
