--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.tomcat.remove-abandoned=true
 spring.datasource.tomcat.remove-abandoned-timeout=1800
 spring.datasource.tomcat.logAbandoned=true
 spring.datasource.continue-on-error=true
-
+##commit error
 ## below line added by neeraj for reset abandoned DB connection from connection pool 
 spring.datasource.tomcat.jdbc-interceptors=ResetAbandonedTimer
 
