--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,7 +27,7 @@ spring.jpa.hibernate.format_sql=true
 
 
 spring.session.store-type=redis
-spring.redis.host=localhost
+#spring.redis.host=localhost
 spring.redis.password=
 spring.redis.port=6379
 ## Below values are needed for extending the expiry time and extend expiry time. 
@@ -39,7 +39,7 @@ enableIPValidation=false
 
 swymed_dnsname=swymed://14.143.13.109
 
-#
+
 ## dev env 
 ## DB Connections 
 #spring.datasource.url=jdbc:mysql://10.208.122.38:3306/db_iemr?autoReconnect=true&useSSL=false
