--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.tomcat.logAbandoned=true
 spring.datasource.continue-on-error=true
 
 
-####### missing commits
+####### ## missing commits
 
 ## below line added by neeraj for reset abandoned DB connection from connection pool 
 spring.datasource.tomcat.jdbc-interceptors=ResetAbandonedTimer
