Revert "Update application.properties"
This reverts commit fb5067ff1b9943721df6264c97fd5b2123fca330

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -121,4 +121,4 @@ swymed_dnsname=swymed://14.143.13.109
 #oncoWL=7
 #tcSpeclistWL=7
 #
-#####spring.redis.host=localhost
+#spring.redis.host=localhost
