--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -42,7 +42,7 @@ enableIPValidation=false
 swymed_dnsname=swymed://14.143.13.109
 
 
-
+##temp
 ## dev env 
 ## DB Connections 
 #spring.datasource.url=jdbc:mysql://10.208.122.38:3306/db_iemr?autoReconnect=true&useSSL=false
