--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,7 +38,7 @@ enableIPValidation=false
 
 
 swymed_dnsname=swymed://14.143.13.109
-
+jitsi_dnsname = https://meet.jit.si
 
 ## dev env 
 ## DB Connections 
@@ -47,8 +47,12 @@ swymed_dnsname=swymed://14.143.13.109
 #spring.datasource.password=Piramal@2017
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 #
-### server port
-#server.port=8082
+### dev env 
+### DB Connections 
+##spring.datasource.url=jdbc:mysql://localhost:3306/db_iemr?autoReconnect=true&useSSL=false
+##spring.datasource.username=root
+##spring.datasource.password=Wipro@123
+##spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 #
 ### Carestream URLs
 ##carestreamOrderCreateURL =http://localhost:8080/carestream/createOrder
@@ -96,7 +100,7 @@ swymed_dnsname=swymed://14.143.13.109
 ##sendSMSUrl=http://localhost:8080/sms/sendSMS
 #sendSMSUrl=http://10.208.122.38:8080/commonapi-v1.0/sms/sendSMS
 #
-### get openkm doc download url
+#### get openkm doc download url
 ##openkmDocUrl=http://localhost:8080/sms/sendSMS
 #openkmDocUrl=http://10.208.122.38:8080/commonapi-v1.0/kmfilemanager/getKMFileDownloadURL
 #
@@ -117,3 +121,9 @@ swymed_dnsname=swymed://14.143.13.109
 #oncoWL=7
 #tcSpeclistWL=7
 #
+#### Redis IP
+#spring.redis.host=localhost
+#
+#### server port
+#server.port=8082
+
