--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,21 +37,21 @@ enableIPValidation=false
 
 swymed_dnsname=swymed://14.143.13.109
 jitsi_dnsname = https://meet.jit.si
-
-## dev env 
-## DB Connections 
-#spring.datasource.url=jdbc:mysql://10.208.122.38:3306/db_iemr?autoReconnect=true&useSSL=false
-#spring.datasource.username=piramaldev
-#spring.datasource.password=Piramal@2017
-#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 #
-### dev env 
-### DB Connections 
-##spring.datasource.url=jdbc:mysql://localhost:3306/db_iemr?autoReconnect=true&useSSL=false
-##spring.datasource.username=root
-##spring.datasource.password=Wipro@123
-##spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+# dev env 
+# DB Connections 
+spring.datasource.url=jdbc:mysql://10.208.122.38:3306/db_iemr?autoReconnect=true&useSSL=false
+spring.datasource.username=piramaldev
+spring.datasource.password=Piramal@2017
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 #
+#### dev env 
+#### DB Connections 
+###spring.datasource.url=jdbc:mysql://localhost:3306/db_iemr?autoReconnect=true&useSSL=false
+###spring.datasource.username=root
+###spring.datasource.password=Wipro@123
+###spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+##
 ### Carestream URLs
 ##carestreamOrderCreateURL =http://localhost:8080/carestream/createOrder
 #carestreamOrderCreateURL =http://10.208.122.38:8080/commonapi-v1.0/carestream/createOrder
@@ -124,5 +124,5 @@ jitsi_dnsname = https://meet.jit.si
 #
 #### server port
 #server.port=8082
-
+#
 
