mobile app hard data added

--- a/src/main/environment/common_test.properties
+++ b/src/main/environment/common_test.properties
@@ -73,6 +73,14 @@ radioWL=7
 oncoWL=7
 tcSpeclistWL=7
 
+
+servicePointID: 235
+parkingPlaceID: 233
+providerServiceMapID: 1261
+vanID: 220
+serviceID: 4
+providerID: 500
+
 ### Redis IP
 spring.redis.host=localhost
 
