added quickblox changes

--- a/src/main/environment/common_test.properties
+++ b/src/main/environment/common_test.properties
@@ -43,7 +43,7 @@ dataSyncDownloadUrl=
 ## TC specialist slot booking
 #tcSpecialistSlotBook=http://localhost:9091/schedule/bookSlot
 tcSpecialistSlotBook=http://10.208.122.38:8080/schedulerapi-v1.0/schedule/bookSlot
-getQuickbloxIds=http://localhost:8080/quickblox/getquickbloxIds
+#getQuickbloxIds=http://localhost:8080/quickblox/getquickbloxIds
 ## TC specialist slot cancelling
 #tcSpecialistSlotCancel=http://localhost:9091/schedule/cancelBookedSlot
 tcSpecialistSlotCancel=http://10.208.122.38:8080/schedulerapi-v1.0/schedule/cancelBookedSlot
