quickblox api final push to develop

--- a/src/main/environment/common_test.properties
+++ b/src/main/environment/common_test.properties
@@ -80,7 +80,10 @@ providerServiceMapID: 1261
 vanID: 220
 serviceID: 4
 providerID: 500
-
+appId: 85696
+authKey: 8BfRcBAGkTQkbQ6
+authSecret: jgQRyySBGu2YcaJ
+scheduling-slotsize=5
 ### Redis IP
 spring.redis.host=localhost
 
