--- a/src/main/environment/common_test.properties
+++ b/src/main/environment/common_test.properties
@@ -84,6 +84,10 @@ appId: 85696
 authKey: 8BfRcBAGkTQkbQ6
 authSecret: jgQRyySBGu2YcaJ
 scheduling-slotsize=5
+prescription=TMPrescription SMS
+
 ### Redis IP
 spring.redis.host=localhost
+
+
 
