--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,7 +37,7 @@ enableIPValidation=false
 
 swymed_dnsname=swymed://14.143.13.109
 jitsi_dnsname = https://meet.jit.si
-#
+
 ## dev env 
 ## DB Connections 
 #spring.datasource.url=jdbc:mysql://10.208.122.38:3306/db_iemr?autoReconnect=true&useSSL=false
@@ -45,13 +45,7 @@ jitsi_dnsname = https://meet.jit.si
 #spring.datasource.password=Piramal@2017
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 #
-#### dev env 
-#### DB Connections 
-###spring.datasource.url=jdbc:mysql://localhost:3306/db_iemr?autoReconnect=true&useSSL=false
-###spring.datasource.username=root
-###spring.datasource.password=Wipro@123
-###spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-##
+#
 ### Carestream URLs
 ##carestreamOrderCreateURL =http://localhost:8080/carestream/createOrder
 #carestreamOrderCreateURL =http://10.208.122.38:8080/commonapi-v1.0/carestream/createOrder
@@ -89,7 +83,7 @@ jitsi_dnsname = https://meet.jit.si
 ### TC specialist slot booking
 ##tcSpecialistSlotBook=http://localhost:9091/schedule/bookSlot
 #tcSpecialistSlotBook=http://10.208.122.38:8080/schedulerapi-v1.0/schedule/bookSlot
-#
+##getQuickbloxIds=http://localhost:8080/quickblox/getquickbloxIds
 ### TC specialist slot cancelling
 ##tcSpecialistSlotCancel=http://localhost:9091/schedule/cancelBookedSlot
 #tcSpecialistSlotCancel=http://10.208.122.38:8080/schedulerapi-v1.0/schedule/cancelBookedSlot
@@ -119,8 +113,21 @@ jitsi_dnsname = https://meet.jit.si
 #oncoWL=7
 #tcSpeclistWL=7
 #
+#
+#servicePointID: 235
+#parkingPlaceID: 233
+#providerServiceMapID: 1261
+#vanID: 220
+#serviceID: 4
+#providerID: 500
+#appId: 85696
+#authKey: 8BfRcBAGkTQkbQ6
+#authSecret: jgQRyySBGu2YcaJ
+#scheduling-slotsize=5
+#prescription=TMPrescription SMS
+#
 #### Redis IP
 #spring.redis.host=localhost
-##
-#### server port
-#server.port=8082
+#
+#
+#
