worklist api changes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,6 +37,7 @@ enableIPValidation=false
 
 swymed_dnsname=swymed://14.143.13.109
 jitsi_dnsname = https://meet.jit.si
+TMReferredWL=90
 
 ## dev env 
 ## DB Connections 
