--- a/src/main/environment/common_dev.properties
+++ b/src/main/environment/common_dev.properties
@@ -55,6 +55,9 @@ sendSMSUrl=http://10.208.122.32:8080/commonapi-v1.0/sms/sendSMS
 #openkmDocUrl=http://localhost:8080/sms/sendSMS
 openkmDocUrl=http://10.208.122.32:8080/commonapi-v1.0/kmfilemanager/getKMFileDownloadURL
 
+##Fetosense Url
+fetosense-api-url-ANCTestDetails=http://localhost:8080/fetosense/registerMother
+
 
 
 ## TM SMS template details(SMS type)
