--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -39,6 +39,9 @@ swymed_dnsname=swymed://14.143.13.109
 jitsi_dnsname = https://meet.jit.si
 TMReferredWL=90
 
+## file storage path for fetosense report
+fotesenseFilePath=D:/FetosenseReport
+
 ## dev env 
 ## DB Connections 
 #spring.datasource.url=jdbc:mysql://10.208.122.38:3306/db_iemr?autoReconnect=true&useSSL=false
