--- a/src/main/environment/common_test.properties
+++ b/src/main/environment/common_test.properties
@@ -57,8 +57,10 @@ sendSMSUrl=http://10.208.122.38:8080/commonapi-v1.0/sms/sendSMS
 openkmDocUrl=http://10.208.122.38:8080/commonapi-v1.0/kmfilemanager/getKMFileDownloadURL
 
 ##Fetosense Url
-fetosense-api-url-ANCTestDetails=http://localhost:8080/fetosense/registerMother
+fetosense-api-url-ANCTestDetails=https://asia-south1-amrit-fetosense.cloudfunctions.net/insertMother
 
+## apiKey for calling fetosense api
+fetosenseAPIKey = jCksvGZYhYssfqLXhsLf
 
 ## TM SMS template details(SMS type)
 schedule=TC Schedule SMS
