--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -40,7 +40,7 @@ jitsi_dnsname = https://meet.jit.si
 TMReferredWL=90
 
 ## file storage path for fetosense report
-fotesenseFilePath=D:/FetosenseReport
+fotesenseFilePath=C:/FetosenseReport
 
 ## dev env 
 ## DB Connections 
