swymed dns change

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,7 +35,7 @@ iemr.extend.expiry.time=true
 iemr.session.expiry.time=1800
 enableIPValidation=false
 
-swymed_dnsname=swymed://14.143.13.109
+swymed_dnsname=swymed://psmri.swymed.com
 jitsi_dnsname = https://meet.jit.si
 TMReferredWL=90
 
