--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -137,3 +137,9 @@ fotesenseFilePath=C:/FetosenseReport
 #
 
 ##missing commit
+
+logging.level.root=INFO
+logging.level.org.springframework.web=INFO
+logging.level.org.hibernate=INFO
+logging.level.com.iemr=DEBUG
+logging.level.org.springframework=INFO
