--- a/.github/workflows/sast-and-package-prod.yml
+++ b/.github/workflows/sast-and-package-prod.yml
@@ -1,4 +1,4 @@
-name: Static Code Analysis and Packaging
+name: Static Code Analysis and Package Prod
 on:
   push:
     branches: [ "master","develop" ]
