--- a/pom.xml
+++ b/pom.xml
@@ -209,10 +209,15 @@
 			<optional>true</optional>
 		</dependency>
 		<dependency>
-			<groupId>com.openkm</groupId>
-			<artifactId>sdk4j</artifactId>
-			<version>1.0</version>
-		</dependency>
+            <groupId>com.sun.jersey.contribs</groupId>
+            <artifactId>jersey-multipart</artifactId>
+            <version>1.18</version>
+        </dependency>
+        <dependency>
+            <groupId>org.glassfish.jersey.media</groupId>
+            <artifactId>jersey-media-multipart</artifactId>
+            <version>2.0-m11</version>
+        </dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-mail</artifactId>
