--- a/pom.xml
+++ b/pom.xml
@@ -322,28 +322,6 @@
 		</dependency>
 	</dependencies>			
 		
-	<build>
-	<finalName>TMapi-v1.0</finalName>
-	<plugins>
-		<plugin>
-			<groupId>org.owasp</groupId>
-			<artifactId>dependency-check-maven</artifactId>
-			<version>9.0.8</version>
-			<configuration>
-			<format>HTML</format>
-			<nvdApiServerId>nvd</nvdApiServerId>
-			<nvdApiKey>79597933-f3cc-4601-949b-12513434ade3</nvdApiKey>
-			</configuration>
-			<executions>
-			<execution>
-			<goals>
-			<goal>check</goal>
-			</goals>
-			</execution>
-			</executions>
- 		</plugin>
-	</plugins>
-	</build>
 	
 
 	<repositories>
@@ -358,6 +336,10 @@
 		<finalName>tmapi-v1.0</finalName>
 		
 		<plugins>
+			<plugin>
+			  <groupId>org.apache.maven.plugins</groupId>
+			  <artifactId>maven-compiler-plugin</artifactId>
+			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-resources-plugin</artifactId>
@@ -464,7 +446,6 @@
 			</plugin>
 			<plugin>
                 <artifactId>maven-war-plugin</artifactId>
-                <version>2.6</version>
                 <configuration>
                     <webResources>
                         <resource>
@@ -475,6 +456,7 @@
                 </configuration>
             </plugin>
 		</plugins>
+	</build>	
 
 	
     
