Junit test cases part 1 (#27)
* Compilation and dependency issues are resolved

* Compilation and dependency issues are resolved

* logback and pom xml files fix

* Junit Test cases part 1

* Delete bin/pom.xml

* Delete bin/src/main/resources/logback.xml

---------

Co-authored-by: AN20279976 <AN20279976@APL-157L3771719>

--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,17 @@
 		<dependency>
 		    <groupId>org.springframework.boot</groupId>
 		    <artifactId>spring-boot-autoconfigure</artifactId>
+
+		</dependency>
+		
+		
+		<!-- https://mvnrepository.com/artifact/org.springframework.plugin/spring-plugin-core -->
+		<dependency>
+		    <groupId>org.springframework.plugin</groupId>
+		    <artifactId>spring-plugin-core</artifactId>
+		    <version>3.0.0</version>
+
+
 		</dependency>
 		
 		
@@ -94,11 +105,16 @@
 
 
 
+
+
+
 		<!-- https://mvnrepository.com/artifact/jakarta.servlet.jsp.jstl/jakarta.servlet.jsp.jstl-api -->
 		<dependency>
     		<groupId>jakarta.servlet.jsp.jstl</groupId>
     		<artifactId>jakarta.servlet.jsp.jstl-api</artifactId>
     	</dependency>
+    	
+    	
     	
     	<!-- https://mvnrepository.com/artifact/jakarta.persistence/jakarta.persistence-api -->
 		<dependency>
@@ -275,6 +291,62 @@
     		<groupId>org.springframework.session</groupId>
     		<artifactId>spring-session-data-redis</artifactId>
     	</dependency>
+	
+		
+		
+		<!-- https://mvnrepository.com/artifact/org.dom4j/dom4j -->
+		<dependency>
+    		<groupId>org.dom4j</groupId>
+    		<artifactId>dom4j</artifactId>
+    		<version>2.1.4</version>
+		</dependency>
+		
+		
+		<!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
+		<dependency>
+    		<groupId>org.mockito</groupId>
+    		<artifactId>mockito-core</artifactId>
+		</dependency>
+		
+	    <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
+		<dependency>
+		    <groupId>org.junit.jupiter</groupId>
+		    <artifactId>junit-jupiter-api</artifactId>
+		 </dependency>
+		 
+		 <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-engine -->
+		 <dependency>
+			    <groupId>org.junit.jupiter</groupId>
+			    <artifactId>junit-jupiter-engine</artifactId>
+		 </dependency>
+
+
+		
+		<!-- https://mvnrepository.com/artifact/com.github.ramalapure/json-parser -->
+		<dependency>
+		    <groupId>com.github.ramalapure</groupId>
+		    <artifactId>json-parser</artifactId>
+		    <version>1.1</version>
+		</dependency>
+	</dependencies>			
+		
+
+		<dependency>
+		    <groupId>io.lettuce</groupId>
+		    <artifactId>lettuce-core</artifactId>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.springframework.session/spring-session-core -->
+		<dependency>
+    		<groupId>org.springframework.session</groupId>
+    		<artifactId>spring-session-core</artifactId>
+    		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/org.springframework.session/spring-session-data-redis -->
+		<dependency>
+    		<groupId>org.springframework.session</groupId>
+    		<artifactId>spring-session-data-redis</artifactId>
+    	</dependency>
 		
 		<!-- https://mvnrepository.com/artifact/com.dukescript.api/junit-browser-runner -->
 		<dependency>
@@ -331,6 +403,7 @@
 			<url>https://maven.openkm.com</url>
 		</repository>
 	</repositories>
+
 
 	<build>
 		<finalName>tmapi-v1.0</finalName>
@@ -457,6 +530,15 @@
             </plugin>
 		</plugins>
 	</build>	
+
+
+	<repositories>
+		<repository>
+			<id>openkm.com</id>
+			<name>OpenKM Maven Repository</name>
+			<url>https://maven.openkm.com</url>
+		</repository>
+	</repositories>
 
 	
     
