--- a/pom.xml
+++ b/pom.xml
@@ -55,8 +55,14 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
+			<exclusions>
+				<exclusion>
+					<groupId>com.jayway.jsonpath</groupId>
+					<artifactId>json-path</artifactId>
+				</exclusion>
+			</exclusions>			
 		</dependency>
-
+		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -85,14 +91,11 @@
 
 		</dependency>
 		
-		
-		<!-- https://mvnrepository.com/artifact/org.springframework.plugin/spring-plugin-core -->
+		<!-- https://mvnrepository.com/artifact/org.springframework/spring-core -->
 		<dependency>
-		    <groupId>org.springframework.plugin</groupId>
-		    <artifactId>spring-plugin-core</artifactId>
-		    <version>3.0.0</version>
-
-
+		    <groupId>org.springframework</groupId>
+		    <artifactId>spring-core</artifactId>
+		    <version>6.1.3</version>
 		</dependency>
 		
 		
@@ -102,11 +105,6 @@
 		    <artifactId>spring-plugin-core</artifactId>
 		    <version>3.0.0</version>
 		</dependency>
-
-
-
-
-
 
 		<!-- https://mvnrepository.com/artifact/jakarta.servlet.jsp.jstl/jakarta.servlet.jsp.jstl-api -->
 		<dependency>
@@ -154,6 +152,7 @@
 		<dependency>
     		<groupId>com.mysql</groupId>
     		<artifactId>mysql-connector-j</artifactId>
+    		<version>8.3.0</version>
 		</dependency>
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
@@ -164,11 +163,6 @@
 			<artifactId>spring-tx</artifactId>
 		</dependency>
 
-		<!--<dependency>
-			<groupId>org.hibernate.javax.persistence</groupId>
-			<artifactId>hibernate-jpa-2.0-api</artifactId>
-			<version>1.0.1.Final</version>
-		</dependency>-->
 
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -185,16 +179,20 @@
 			<version>2.0</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
 		<dependency>
-			<groupId>com.fasterxml.jackson.core</groupId>
-			<artifactId>jackson-databind</artifactId>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-databind</artifactId>
+		    <version>2.16.1</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
 		<dependency>
-			<groupId>com.google.guava</groupId>
-			<artifactId>guava</artifactId>
-			<version>21.0</version>
+		    <groupId>com.google.guava</groupId>
+		    <artifactId>guava</artifactId>
+		    <version>33.0.0-jre</version>
 		</dependency>
+
 
 		<dependency>
 			<groupId>io.springfox</groupId>
@@ -222,21 +220,14 @@
 		    <version>20231013</version>
 		</dependency>
 
-		<dependency>
-			<groupId>com.fasterxml.jackson.datatype</groupId>
-			<artifactId>jackson-datatype-joda</artifactId>
-		</dependency>
 		<dependency> 
     		<groupId>org.springframework.boot</groupId> 
     		<artifactId>spring-boot-starter-validation</artifactId> 
 		</dependency>
 		<dependency>
-			<groupId>com.fasterxml.jackson.core</groupId>
-			<artifactId>jackson-databind</artifactId>
-		</dependency>
-		<dependency>
 			<groupId>org.quartz-scheduler</groupId>
 			<artifactId>quartz</artifactId>
+			<version>2.5.0-rc1</version>
 			</dependency>
 		<dependency>
 			<groupId>org.quartz-scheduler</groupId>
@@ -327,92 +318,15 @@
 		    <groupId>com.github.ramalapure</groupId>
 		    <artifactId>json-parser</artifactId>
 		    <version>1.1</version>
-		</dependency>
+		</dependency>				
+
 	</dependencies>			
-		
-
-		<dependency>
-		    <groupId>io.lettuce</groupId>
-		    <artifactId>lettuce-core</artifactId>
-		</dependency>
-
-		<!-- https://mvnrepository.com/artifact/org.springframework.session/spring-session-core -->
-		<dependency>
-    		<groupId>org.springframework.session</groupId>
-    		<artifactId>spring-session-core</artifactId>
-    		</dependency>
-		
-		<!-- https://mvnrepository.com/artifact/org.springframework.session/spring-session-data-redis -->
-		<dependency>
-    		<groupId>org.springframework.session</groupId>
-    		<artifactId>spring-session-data-redis</artifactId>
-    	</dependency>
-		
-		<!-- https://mvnrepository.com/artifact/com.dukescript.api/junit-browser-runner -->
-		<dependency>
-    		<groupId>com.dukescript.api</groupId>
-    		<artifactId>junit-browser-runner</artifactId>
-    		<version>1.0</version>
-    		<scope>test</scope>
-		</dependency>
-		
-		
-		<!-- https://mvnrepository.com/artifact/org.dom4j/dom4j -->
-		<dependency>
-    		<groupId>org.dom4j</groupId>
-    		<artifactId>dom4j</artifactId>
-    		<version>2.1.4</version>
-		</dependency>
-		
-		
-		<!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
-		<dependency>
-    		<groupId>org.mockito</groupId>
-    		<artifactId>mockito-core</artifactId>
-    		<scope>test</scope>
-		</dependency>
-	    <dependency>
-   			<groupId>org.mockito</groupId>
-   			<artifactId>mockito-all</artifactId>
-   			<version>1.9.5</version>
-  			<scope>test</scope>
-		</dependency>
-		
-		<!-- https://mvnrepository.com/artifact/com.github.ramalapure/json-parser -->
-		<dependency>
-		    <groupId>com.github.ramalapure</groupId>
-		    <artifactId>json-parser</artifactId>
-		    <version>1.1</version>
-		</dependency>
-
-		
-		<!-- https://mvnrepository.com/artifact/org.owasp/dependency-check-maven -->
-		<dependency>
-		    <groupId>org.owasp</groupId>
-		    <artifactId>dependency-check-maven</artifactId>
-		    <version>9.0.8</version>
-		</dependency>
-	</dependencies>			
-		
-	
-
-	<repositories>
-		<repository>
-			<id>openkm.com</id>
-			<name>OpenKM Maven Repository</name>
-			<url>https://maven.openkm.com</url>
-		</repository>
-	</repositories>
 
 
 	<build>
 		<finalName>tmapi-v1.0</finalName>
 		
 		<plugins>
-			<plugin>
-			  <groupId>org.apache.maven.plugins</groupId>
-			  <artifactId>maven-compiler-plugin</artifactId>
-			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-resources-plugin</artifactId>
@@ -531,15 +445,6 @@
 		</plugins>
 	</build>	
 
-
-	<repositories>
-		<repository>
-			<id>openkm.com</id>
-			<name>OpenKM Maven Repository</name>
-			<url>https://maven.openkm.com</url>
-		</repository>
-	</repositories>
-
 	
     
 	<dependencyManagement>
@@ -549,10 +454,11 @@
 				<artifactId>springfox-swagger2</artifactId>
 				<version>2.6.1</version>
 			</dependency>
+			<!-- https://mvnrepository.com/artifact/io.springfox/springfox-swagger-ui -->
 			<dependency>
-				<groupId>io.springfox</groupId>
-				<artifactId>springfox-swagger-ui</artifactId>
-				<version>2.6.1</version>
+			    <groupId>io.springfox</groupId>
+			    <artifactId>springfox-swagger-ui</artifactId>
+			    <version>3.0.0</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
