--- a/pom.xml
+++ b/pom.xml
@@ -194,16 +194,7 @@
 		</dependency>
 
 
-		<dependency>
-			<groupId>io.springfox</groupId>
-			<artifactId>springfox-swagger2</artifactId>
-			<scope>compile</scope>
-		</dependency>
-		<dependency>
-			<groupId>io.springfox</groupId>
-			<artifactId>springfox-swagger-ui</artifactId>
-			<scope>compile</scope>
-		</dependency>
+		
 		<dependency>
 			<groupId>org.json</groupId>
 			<artifactId>json</artifactId>
@@ -318,6 +309,12 @@
 		    <groupId>com.github.ramalapure</groupId>
 		    <artifactId>json-parser</artifactId>
 		    <version>1.1</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.3.0</version>
 		</dependency>				
 
 	</dependencies>			
@@ -447,19 +444,5 @@
 
 	
     
-	<dependencyManagement>
-		<dependencies>
-			<dependency>
-				<groupId>io.springfox</groupId>
-				<artifactId>springfox-swagger2</artifactId>
-				<version>2.6.1</version>
-			</dependency>
-			<!-- https://mvnrepository.com/artifact/io.springfox/springfox-swagger-ui -->
-			<dependency>
-			    <groupId>io.springfox</groupId>
-			    <artifactId>springfox-swagger-ui</artifactId>
-			    <version>3.0.0</version>
-			</dependency>
-		</dependencies>
-	</dependencyManagement>
+	
 </project>
