Unused API and properties removed

--- a/src/main/environment/common_dev.properties
+++ b/src/main/environment/common_dev.properties
@@ -63,15 +63,7 @@ labWL=7
 radioWL=7
 oncoWL=7
 tcSpeclistWL=7
-servicePointID=
-parkingPlaceID=
-providerServiceMapID=
-vanID=
-serviceID=
-providerID=
-appId=
-authKey=
-authSecret=
+prescription=TMPrescription SMS
 ### Redis IP
 spring.redis.host=localhost
 
