--- a/src/main/environment/common_uat.properties
+++ b/src/main/environment/common_uat.properties
@@ -64,15 +64,8 @@ labWL=7
 radioWL=7
 oncoWL=7
 tcSpeclistWL=7
-servicePointID=
-parkingPlaceID=
-providerServiceMapID=
-vanID=
-serviceID=
-providerID=
-appId=
-authKey=
-authSecret=
+
+prescription=TMPrescription SMS
 ### Redis IP
 spring.redis.host=localhost
 
